--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="cz">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
   <link rel="stylesheet" href="style.css">
   <title>jan michl : články o designu v češtině</title>
 </head>
+
 <body>
   <div class="wrapper">
     <header>
       <div class="bibliography__introduction">
         <p>
-          You are in Oslo, 
+          You are in Oslo,
           Norway <br />
           The following texts are in Czech (or Slovak) and were written<br />
           by <strong><a href="index.html" style="text-decoration: none">Jan Michl</a></strong>
@@ -23,7 +25,7 @@
           [To Michl's texts
           <a href="english-only.htm" style="text-decoration: none">in English</a>]
           <br />
-          [To Michl's texts 
+          [To Michl's texts
           <a href="norwegian-only.htm" style="text-decoration: none">in Norwegian</a>]
           <br />
           [To Michl's <a href="biblio.html" style="text-decoration: none">full bibliography</a>]
@@ -31,29 +33,167 @@
       </div>
       <div class="bibliography__heading">
         <hr>
-        <h1 class="bibliography__heading-text">: články o designu v češtině 
+        <h1 class="bibliography__heading-text">: články o designu v češtině
           <span class="bibliography__heading-text--small">
-              (a <a href="sk.apartheid.html">slovenštině</a>)
-            </span>
+            (a <a href="sk.apartheid.html">slovenštině</a>)
+          </span>
         </h1>
         <hr>
       </div>
     </header>
     <main>
+      <!-- publication entry -->
       <div class="publication-entry">
         <h4 class="publication-entry__title">
-          <a href="https://youtu.be/kN7_bccb_nc">O potrebe pojmu styl a styling v pedagogice architektury a designu </a>
+          <a href="https://youtu.be/kN7_bccb_nc">O potřebe pojmu <em>styl</em> a <em>styling</em> v pedagogice
+            architektury a designu </a>
         </h4>
         <p class="publication-entry__description">
-          Videozaznam pozvane prednasky z konference Modely umeleckeho vzdelavania: Odkial a kam? (ca 40minut). 
-          <br />Technicka univerzita Kosice, 5. rijna 2018 
+          Videozáznam pozvané prednášky z konference Modely umeleckeho vzdelavania: Odkial a kam? (ca 40minut).
+          <br />Technicka univerzita Kosice, 5. rijna 2018
         </p>
         <p class="publication-entry__year">2018</p>
       </div>
+      <!-- publication entry -->
+      <div class="publication-entry">
+        <h4 class="publication-entry__title">
+          <a href="cz.sudek.pdf" style="text-decoration: none">Tichý heretik. <span class="not-bold">Poznámky k
+              orientaci Josefa Sudka.</span> </a> <span class="not-bold">[1976]</span>
+        </h4>
+        <p class="publication-entry__description">
+          In: <em>Fotografie předevm. Sborník textů k poctě Antonna Dufka.</em>
+          <br />Petra Trnkov, Luk Brtl, eds., str. 88-99.
+          <br />Barrister&Principal Publishing, Brno, 192 stran.
+        </p>
+        <p class="publication-entry__year">2017</p>
+      </div>
+      <div class="publication-entry">
+        <h4 class="publication-entry__title">
+          <a href="http://www.goethe.de/ins/cz/prj/jug/the/uto/cs16217713.htm#top">Modernismus,
+            (re)design a udritelnost:
+            <br />
+            <span class="not-bold">Rozmluva Kateřiny Přidalov s Janem Michlem</span>
+          </a>
+        </h4>
+        <p class="publication-entry__description">
+          J DU, online magazn Goethova Institutu v Praze.
+          <br />
+          Rozmluva ve formtu <a href="cz.rozmluva-2017.pdf">pdf.</a>
+          <br> (Německ verze rozhovoru <a href="http://www.goethe.de/ins/cz/prj/jug/the/uto/de16217713.htm">zde</a>.)
+        </p>
+        <p class="publication-entry__year">2017</p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title">
+          <a href="https://designreader.org/problem-informaci-ve-dvou-jazycich">Problm grafick prezentace informac
+            ve dvou jazycch</a>
+        </h4>
+        <p class="publication-entry__description">DESIGNREADER.ORG</p>
+        <p class="publication-entry__year">2017</p>
+      </div>
+
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title">
+          <a href="cz.neomezena-platnost.pdf">
+            Proč lze přistupovat ke stylovm idiomům minulosti
+            <br />jako k vtvarnm vynlezům s neomezenou platnost
+            <span class="not-bold">
+              <br />Pohled na dějiny architektury jako na permanentn přtomnost minulosti
+              <br />a jeho důsledky pro vzdělvn architektů a designrů
+            </span>
+          </a>
+        </h4>
+        <p class="publication-entry__description">
+          Česk resum <a href="eng.no-expiration">anglickho textu</a> pro slovensk časopis ARS 48,
+          2015, 1, publikovan na str. 20-21.</p>
+        <p class="publication-entry__year">2015</p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title">
+          <img src="youtube.jpg" alt="youtube icon" />
+          <span class="not-bold">Videozznam přednky na Fakultě architektury VUT v Brně:</span>
+          <br />
+          <a href="https://www.youtube.com/watch?v=beKN4UjDni4&t=257s">Někter realistick
+            teorie designu převně z angloamerickho světa.</a>
+        </h4>
+        <p class="publication-entry__description">
+          Text, z něho přednka vychzela, je ve formtu PDF přstupn <a href="cz.realist.pdf">zde</a>.
+        </p>
+        <p class="publication-entry__year"><span class="not-bold">Říjen </span>2014</p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title">
+          <a href="cz.ornament-lhv.pdf">
+            Je ornament anachronismus?<br />
+            <span class="not-bold">
+              Zamylen nad knihou <em>Tich revoluce uvnitř ornamentu</em> od Lady Hubatov-Vackov
+              (2012).
+            </span>
+          </a>
+        </h4>
+        <p class="publication-entry__description">
+          <a href="http://www.cdk.cz/kontexty/"><em>Kontexty</em></a> 2/2014, 92-100.
+        </p>
+        <p class="publication-entry__year">2014</p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
+      <div class="publication-entry">
+        <h4 class="publication-entry__title"></h4>
+        <p class="publication-entry__description"></p>
+        <p class="publication-entry__year"></p>
+      </div>
+
     </main>
     <footer>
 
     </footer>
   </div>
 </body>
+
 </html>
